// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly at all sizes 1`] = `
<div
  class="grid gap-y-8"
>
  <div
    class="p-8 flex items-center justify-center w-full bg-theme-text text-theme-bg"
  >
    content
  </div>
</div>
`;

exports[`renders correctly at all sizes 2`] = `
<div
  class="grid gap-y-16"
>
  <div
    class="p-8 flex items-center justify-center w-full bg-theme-text text-theme-bg"
  >
    content
  </div>
</div>
`;

exports[`renders correctly at all sizes 3`] = `
<div
  class="grid gap-y-32"
>
  <div
    class="p-8 flex items-center justify-center w-full bg-theme-text text-theme-bg"
  >
    content
  </div>
</div>
`;
